# claude-workbench

./: .gitignore  AGENTS.md  CLAUDE.md  index.html  package-lock.json  package.json
.claude/: TERMINAL_LINKAGE_ANALYSIS.md  plan.md
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: events.rs  lib.rs
src-tauri/src/commands/: changes.rs  mod.rs  project.rs  session.rs  terminal.rs
src-tauri/src/session/: file_tracker.rs  manager.rs  mod.rs
src-tauri/src/storage/: db.rs  log.rs  mod.rs  schema.rs
src/components/: ErrorBoundary.tsx
src/components/changes/: FileChangesPanel.tsx
src/components/guide/: ClaudeGuidePage.tsx
src/components/layout/: MainPanel.tsx  RightPanel.tsx  Sidebar.tsx  TabBar.tsx
src/components/search/: SearchPanel.tsx
src/components/session/: CreateProjectDialog.tsx  CreateSessionDialog.tsx
src/components/settings/: SettingsPage.tsx
src/components/sidebar/: ProjectList.tsx  SessionItem.tsx
src/components/terminal/: EnhancedOutputPanel.tsx  TerminalSearchBar.tsx  TerminalView.tsx
src/components/ui/: confirm-dialog.tsx  drawer.tsx  dropdown-menu.tsx
src/hooks/: useKeyboardShortcuts.ts
src/lib/: tauri.ts  terminalEnhancer.ts  terminalTheme.ts
src/providers/: ThemeProvider.tsx
src/state/: changesStore.ts  projectStore.ts  sessionStore.ts  settingsStore.ts  uiStore.ts
